[package]
name = "boca-apeineitor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7"
utoipa = { version = "4.2", features = ["actix_extras"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
